--- a/web/home.html
+++ b/web/home.html
@@ -5,6 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
-    </body>
+<div class="wrapper overlay">
+                <article id="pageintro" >
+                    <select  style="width: 4000px">
+                    <option >Busqueda por Nombre</option>
+                    <option >Busqueda por id</option>
+                    <option >Busqueda por Etiqueta</option>
+
+                    </select>
+                </article>
+            </div>    </body>
 </html>
